# Note_taker-course

./: .gitignore  README.md  main.py  pyproject.toml  transcribe.py
